--- a/main.css
+++ b/main.css
@@ -144,4 +144,168 @@ body {
         z-index: 10;
         visibility: hidden;
     }
+    #third-page {
+        visibility: hidden;
+    }
+    /*-----------------------------------------------------------------------------------------------------*/
+    /*-----------------------------------------------------------------------------------------------------*/
+    /*-----------------------------------------------------------------------------------------------------*/
+    /*-----------------------------------------------------------------------------------------------------*/
+    #nbd {
+        position: absolute;
+        font-family: 'Montserrat';
+        color: #000;
+        text-align: center;
+        font-size: 5vw;
+        font-weight: bold;
+        top: 19vw;
+        left: 17vw;
+        opacity: 0;
+        transition: 1s ease;
+    }
+    #pre {
+        position: absolute;
+        padding: 10vw 15vw;
+        text-align: center;
+        font-family: 'Montserrat';
+        color: #fff;
+        font-weight: bold;
+        font-size: 5vw;
+        animation: drop 8s ease ;
+        opacity: 1;
+        top: 0vw;
+        left: 100vw;
+    }
+    #pre1 {
+        position: absolute;
+        padding: 10vw 15vw;
+        text-align: center;
+        font-family: 'Montserrat';
+        color: #fff;
+        font-weight: bold;
+        font-size: 6vw;
+        opacity: 0;
+        top: 13vw;
+        left: -2vw;
+        transition: 2s ease;
+    }
+    .body {
+        position: absolute;
+        background-color: #8D8D8D;
+        padding: 50vw 43.5vw;
+        top: 44vw;
+        left: 6.5vw;
+        border-radius: 5vw;
+        opacity: 1;
+    }
+    #fq {
+        position: absolute;
+        font-family: 'Montserrat';
+        font-weight: bold;
+        font-size: 5.5vw;
+        color: #fff;
+        top: 50vw;
+        left: 10vw;
+        opacity: 0;
+        transition: 1s ease;
+    }
+    #b1 {
+        position: absolute;
+        padding: 4vw 10vw;
+        background-color: #fff;
+        top: 97vw;
+        left: 12vw;
+        border-radius: 5vw;
+        color: #000;
+        font-family: 'Montserrat';
+        font-weight: bold;
+        visibility: hidden;
+        opacity: 0;
+        transition: 1s ease;
+    }
+    #b2 {
+        position: absolute;
+        padding: 4vw 10vw;
+        background-color: #fff;
+        top: 97vw;
+        left: 48vw;
+        border-radius: 5vw;
+        color: #000;
+        font-family: 'Montserrat';
+        font-weight: bold;
+        visibility: hidden;
+        opacity: 0;
+        transition: 1s ease;
+    }
+    #b3 {
+        position: absolute;
+        padding: 4vw 10vw;
+        background-color: #fff;
+        top: 75vw;
+        left: 23vw;
+        border-radius: 5vw;
+        color: #000;
+        font-family: 'Montserrat';
+        font-weight: bold;
+        visibility: hidden;
+        opacity: 0;
+        transition: 1s ease;
+    }
+    #b4 {
+        position: absolute;
+        padding: 4vw 10vw;
+        background-color: #fff;
+        top: 120vw;
+        left: 17vw;
+        border-radius: 5vw;
+        color: #000;
+        font-family: 'Montserrat';
+        font-weight: bold;
+        visibility: hidden;
+        opacity: 0;
+        transition: 1s ease;
+    }
+    #tp-arrow {
+        position: absolute;
+        transform: rotate(180deg);
+        width: 9vw;
+        top: 9vw;
+        left: 1vw;
+        filter: invert(100%);
+        z-index: 10;
+        visibility: hidden;
+    }
+    #redscreen{
+        position: relative;
+        top: -100vw;
+        padding: 500vw 500vw;
+        background-color: #cf0000;
+        visibility: hidden;
+        transition: 1s ease;
+    }
+    #greenscreen{
+        position: relative;
+        top: -300vw;
+        padding: 500vw 500vw;
+        background-color: #23a600;
+        visibility: hidden;
+        transition: 1s ease;
+    }
+    @keyframes drop {
+        0% {
+            opacity: 0;
+            top: -20vw;
+            left: -1vw;
+        }
+        70% {
+            opacity: 1;
+            top: 5vw;
+            left: -1vw;
+        }
+        100% {
+            opacity: 1;
+            top: 5vw;
+            left: 100vw;
+        }
+    }
 }
