--- a/main.css
+++ b/main.css
@@ -5,15 +5,16 @@
 }
 
 body {
-    height: 180vw;
+    height: 10vw;
     background-color: #000;
 }
 
 @media only screen and (max-width: 575px) {
     body {
         background-color: #727272;
-        /*position: fixed;*/
-        /*overflow: hidden;*/
+        height: 10vw;
+        position: fixed;
+        overflow: hidden;
     }
     .boxes {
         position: absolute;
@@ -85,6 +86,9 @@ body {
         visibility: visible;
     }
     #second-page {
+        visibility: hidden;
+    }
+    #third-page {
         visibility: hidden;
     }
     /*------------------------------------------------------------------------------------------------------*/
@@ -171,10 +175,10 @@ body {
         color: #fff;
         font-weight: bold;
         font-size: 5vw;
-        animation: drop 8s ease ;
         opacity: 1;
         top: 0vw;
-        left: 100vw;
+        left: 1vw;
+        visibility: hidden;
     }
     #pre1 {
         position: absolute;
@@ -290,22 +294,5 @@ body {
         background-color: #23a600;
         visibility: hidden;
         transition: 1s ease;
-    }
-    @keyframes drop {
-        0% {
-            opacity: 0;
-            top: -20vw;
-            left: -1vw;
-        }
-        70% {
-            opacity: 1;
-            top: 5vw;
-            left: -1vw;
-        }
-        100% {
-            opacity: 1;
-            top: 5vw;
-            left: 100vw;
-        }
     }
 }
