--- a/main.css
+++ b/main.css
@@ -175,10 +175,11 @@ body {
         color: #fff;
         font-weight: bold;
         font-size: 5vw;
-        opacity: 1;
+        opacity: 0;
         top: 0vw;
         left: 1vw;
         visibility: hidden;
+        transition: 1s ease;
     }
     #pre1 {
         position: absolute;
