--- a/main.css
+++ b/main.css
@@ -298,6 +298,7 @@ body {
         transition: 1s ease;
     }
     #popupDiv {
+        display: none;
         color:#000 !important;
         margin-top: -10vw ;
         padding: 5px 0px 8px 0px !important;
@@ -310,5 +311,6 @@ body {
         border-style: solid !important;
         color: rgba( 0%,0%,0%,1) !important;
         box-shadow: 2px 2px 2px rgba(0%,0%,0%,0.2) !important;
+        font-size: 100vw;
     }
 }
