--- a/main.css
+++ b/main.css
@@ -299,7 +299,7 @@ body {
     }
     #popupDiv {
         color:#000 !important;
-        margin: 8px 0px 2px 4px !important;
+        margin: 600px 0px 2px 4px !important;
         padding: 5px 0px 8px 0px !important;
         -webkit-border-radius:  5px 5px 5px 5px;
         -moz-border-radius: 5px 5px 5px 5px !important ;
@@ -310,7 +310,7 @@ body {
         border-style: solid !important;
         color: rgba( 0%,0%,0%,1) !important;
         box-shadow: 2px 2px 2px rgba(0%,0%,0%,0.2) !important;
-        position: relative;
-        top: -1000vw !important;
+        position: absoloute;
+        font-size: 5vw;
     }
 }
