--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body {
 
 @media only screen and (max-width: 575px) {
     body {
-        background-color: #727272;
+        background-color: #0d1e39;
         height: 15vw;
         position: fixed;
         /*overflow: hidden;*/
@@ -30,7 +30,7 @@ body {
     }
     #firstbody{
         position: absolute;
-        background-color: #8D8D8D;
+        background-color: #3b4a61;
         padding: 13vw 40vw;
         top: 30vw;
         left: 10vw;
@@ -48,7 +48,7 @@ body {
     }
     #secondbody{
         position: absolute;
-        background-color: #8D8D8D;
+        background-color: #3b4a61;
         padding: 13vw 40vw;
         top: 65vw;
         left: 10vw;
@@ -66,7 +66,7 @@ body {
     }
     #thirdbody{
         position: absolute;
-        background-color: #8D8D8D;
+        background-color: #3b4a61;
         padding: 13vw 40vw;
         top: 100vw;
         left: 10vw;
@@ -114,7 +114,7 @@ body {
     }
     .body {
         position: absolute;
-        background-color: #8D8D8D;
+        background-color: #3b4a61;
         padding: 50vw 43.5vw;
         top: 44vw;
         left: 6.5vw;
