--- a/main.css
+++ b/main.css
@@ -158,7 +158,7 @@ body {
     #nbd {
         position: absolute;
         font-family: 'Montserrat';
-        color: #000;
+        color: #fff;
         text-align: center;
         font-size: 5vw;
         font-weight: bold;
