--- a/main.css
+++ b/main.css
@@ -100,7 +100,7 @@ body {
         font-size: 5.8vw;
         color: #fff;
         font-weight: bold;
-        margin-left: 19vw;
+        margin-left: 15vw;
         margin-top: 9.5vw;
     }
     #datetime{
@@ -292,36 +292,52 @@ body {
         z-index: 10;
         visibility: hidden;
     }
-    #redscreen{
-        position: relative;
-        top: -100vw;
-        padding: 500vw 500vw;
-        background-color: #cf0000;
+    #fourth-page {
         visibility: hidden;
-        transition: 1s ease;
     }
-    #greenscreen{
-        position: relative;
-        top: -300vw;
-        padding: 500vw 500vw;
-        background-color: #23a600;
+    /*-----------------------------------------------------------------------------------------------------*/
+    /*-----------------------------------------------------------------------------------------------------*/
+    /*-----------------------------------------------------------------------------------------------------*/
+    /*-----------------------------------------------------------------------------------------------------*/
+    .fp-body {
+        position: absolute;
+        background-color: #3b4a61;
+        padding: 80vw 43.5vw;
+        top: 44vw;
+        left: 6.5vw;
+        border-radius: 5vw;
+        opacity: 1;
+    }
+    #f-txt {
+        position: absolute;
+        font-family: 'Montserrat';
+        text-align: left;
+        font-size: 4.7vw;
+        left: 0vw;
+        top: 10vw;
+        padding: 0vw 8vw;
+        font-weight: bold;
+        color: #2d97ab;
+    }
+    #f-title {
+        position: absolute;
+        font-family: 'Montserrat';
+        text-align: left;
+        font-size: 6vw;
+        left: 23vw;
+        top: 20vw;
+        font-weight: bold;
+        color: #fff;
+    }
+    #fp-arrow {
+        position: absolute;
+        transform: rotate(180deg);
+        width: 9vw;
+        top: 9vw;
+        left: 1vw;
+        filter: invert(100%);
+        z-index: 10;
         visibility: hidden;
-        transition: 1s ease;
     }
-    #popupDiv {
-        color:#000 !important;
-        margin: 600px 0px 2px 4px !important;
-        padding: 5px 0px 8px 0px !important;
-        -webkit-border-radius:  5px 5px 5px 5px;
-        -moz-border-radius: 5px 5px 5px 5px !important ;
-        border-radius: 5px 5px 5px 5px;
-        background-color:rgba(100%,100%,100%,1) !important;
-        border-width: 1px !important;
-        border-color: rgba( 0, 20, 45, .5) !important;
-        border-style: solid !important;
-        color: rgba( 0%,0%,0%,1) !important;
-        box-shadow: 2px 2px 2px rgba(0%,0%,0%,0.2) !important;
-        position: absoloute;
-        font-size: 5vw;
-    }
+
 }
