--- a/main.css
+++ b/main.css
@@ -316,7 +316,7 @@ body {
         top: 10vw;
         padding: 0vw 8vw;
         font-weight: bold;
-        color: #4a9878;
+        color: #0d1f23;
     }
     #f-title {
         position: absolute;
