--- a/main.css
+++ b/main.css
@@ -16,6 +16,9 @@ body {
         position: fixed;
         /*overflow: hidden;*/
     }
+    #count {
+        display: none;
+    }
     .boxes {
         position: absolute;
     }
