--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body {
         position: fixed;
         /*overflow: hidden;*/
     }
-    .count {
+    #count {
         display: -moz-grid-line;
         color: #fff;
         font-family: 'Poppins';
