--- a/main.css
+++ b/main.css
@@ -243,8 +243,8 @@ body {
         color: #000;
         font-family: 'Montserrat';
         font-weight: bold;
-        visibility: hidden;
-        opacity: 0;
+        visibility: visible;
+        opacity: 1;
         transition: 1s ease;
     }
     #b2 {
@@ -257,8 +257,8 @@ body {
         color: #000;
         font-family: 'Montserrat';
         font-weight: bold;
-        visibility: hidden;
-        opacity: 0;
+        visibility: visible;
+        opacity: 1;
         transition: 1s ease;
     }
     #b3 {
@@ -271,8 +271,8 @@ body {
         color: #000;
         font-family: 'Montserrat';
         font-weight: bold;
-        visibility: hidden;
-        opacity: 0;
+        visibility: visible;
+        opacity: 1;
         transition: 1s ease;
     }
     #b4 {
@@ -285,8 +285,8 @@ body {
         color: #000;
         font-family: 'Montserrat';
         font-weight: bold;
-        visibility: hidden;
-        opacity: 0;
+        visibility: visible;
+        opacity: 1;
         transition: 1s ease;
     }
     #tp-arrow {
